@@ -70,6 +70,8 @@ production.
   warnings/notices to be thrown.
 * (bug 30335) Fix for HTMLForms using GET breaking when non-friendly URLs are
   used
+* (bug 28649) Avoiding half truncated multi-byte unicode characters when 
+  truncating log comments.
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
